# PandM

./: .gitignore  README.md  index.html  knowledge-graph.html  package-lock.json  package.json  tailwind.config.js  vite-plugin-scan.js  vite.config.js
docs/: 可视化与布局调整.md
materials/: README.md  (+6 more)
materials/software/qc-x-chem/: .graphmeta.json  PySCF_WSL与Windows使用说明.md  _binsearch_cmake.py  install_pyscf_wsl.ps1  install_pyscf_wsl.sh  pyproject.toml  regen_qa_html.py
materials/software/qc-x-chem/dft_qc_pipeline/: .graphmeta.json  DEV_MEMORY.md  OPTIMIZATION.md  README.md  TECH_DOC.md  __init__.py
materials/software/qc-x-chem/dft_qc_pipeline/classical_backends/: __init__.py  base.py  pyscf_backend.py  toy_backend.py
materials/software/qc-x-chem/dft_qc_pipeline/configs/: fen4_dmet_sqd.yaml  h2_sto3g_dft_pbe.yaml  h2_vqe.yaml  hubbard_2site_numpy.yaml  lih_sto3g_numpy.yaml  n2_compare.yaml
materials/software/qc-x-chem/dft_qc_pipeline/core/: __init__.py  config.py  interfaces.py  pipeline.py  registry.py
materials/software/qc-x-chem/dft_qc_pipeline/embedding/: __init__.py  avas.py  base.py  dmet.py  hubbard.py  projector.py  simple_cas.py
materials/software/qc-x-chem/dft_qc_pipeline/examples/: 01_H2_minimal.ipynb  02_N2_multisolver.ipynb  03_FeN4_DMET_SQD.ipynb
materials/software/qc-x-chem/dft_qc_pipeline/hamiltonian/: __init__.py  builder.py  fragment_region.py  localizer.py  mappers.py
materials/software/qc-x-chem/quantum_chem_bench/: .graphmeta.json  README.md  TECH_DOC.md  __init__.py
materials/software/qc-x-chem/quantum_chemistry/: README.md  __init__.py
(+299 files in other folders)
